add more variables including github username

--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -14,7 +14,7 @@ users:
     groups: users, admin, sudo
     sudo: ['ALL=(ALL) NOPASSWD:ALL']
     ssh_import_id:
-      - gh:vicmike 
+      - gh:${github_user} 
 services:
   nginx:
     enabled: true
