--- a/Caddyfile
+++ b/Caddyfile
@@ -1,44 +1,24 @@
 assessment.greensteptourism.com {
-    redir https://{host}{uri}
-
-    header {
-        -Server
-    }
-
-    encode gzip
-
-    reverse_proxy / http://tourism_upstream {
+    http://localhost:3002 {
         header_up Host {host}
         header_up X-Forwarded-For {remote}
-        header_up X-Forwarded-Proto {scheme}
-        transport http {
-            versions 1.1
-            header_up Upgrade {>Upgrade}
-            header_up Connection {>Connection}
-        }
     }
 }
 
 dashboard.greensteptourism.com {
-    redir https://{host}{uri}
-
-    header {
-        -Server
-    }
-
-    encode gzip
-
-    reverse_proxy / http://dashboard_upstream {
+    reverse_proxy http://localhost:3004 {
         header_up Host {host}
         header_up X-Forwarded-For {remote}
-        header_up X-Forwarded-Proto {scheme}
-        transport http {
-            versions 1.1
-            header_up Upgrade {>Upgrade}
-            header_up Connection {>Connection}
-        }
     }
 }
+
+carbon.ecobasesolutions.com {
+    reverse_proxy http://localhost:3002 {
+        header_up Host {host}
+        header_up X-Forwarded-For {remote}
+    }
+}
+
 
 api.assessment.greensteptourism.com {
     reverse_proxy http://localhost:4002 {
