--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -93,13 +93,17 @@ users:
 
 services:
   nginx:
-    enabled: true
+    enabled: false
     restart: on-failure
   redis:
     enabled: true
     restart: on-failure
+  caddy:
+    enabled: true
+    restart: on-failure
 
 runcmd:
+
   - mkdir -p /opt/nvm
   - wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | NVM_DIR=/opt/nvm bash
   - printf '\nexport NVM_DIR="/opt/nvm"\n[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"\n' >> /etc/bash.bashrc
